# diabetes

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
app/: app.py
app/static/: index.html
diabetes_model/: pipeline.py  predict.py  train_pipeline.py
diabetes_model/config/: config.yml  core.py
diabetes_model/processing/: data_manager.py
diabetes_model/trained_models/: diabetes_model_output_v1.0.0.pkl
tests/: test_app.py  test_features.py  test_prediction.py  test_predition.py
