[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diabetes_model"
version = "0.1.0"
description = "A diabetes-prediction ML pipeline"
readme = "README.md"     
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Your Name", email = "you@example.com" },
]

dependencies = [
  "feature-engine==1.8.3",
  "joblib==1.5.0",
  "numpy==2.2.6",
  "pandas==2.2.3",
  "pydantic==2.11.4",
  "scikit-learn==1.6.1",
  "strictyaml==1.7.3",
]

[project.urls]
Homepage = "https://github.com/bitegen/diabetes"
Source   = "https://github.com/bitegen/diabetes.git"

[tool.setuptools.packages.find]
# Include your top‐level package and any subpackages
include = ["diabetes_model", "diabetes_model.*"]